@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Netflix, Inc.
+ * Copyright 2022 Netflix, Inc.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -12,15 +12,12 @@
  */
 package com.netflix.conductor.core.metadata;
 
-import com.google.common.collect.ImmutableList;
-import com.netflix.conductor.common.metadata.tasks.TaskDef;
-import com.netflix.conductor.common.metadata.tasks.TaskType;
-import com.netflix.conductor.common.metadata.workflow.SubWorkflowParams;
-import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
-import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.core.exception.ApplicationException;
-import com.netflix.conductor.core.exception.TerminateWorkflowException;
-import com.netflix.conductor.dao.MetadataDAO;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+
+import javax.validation.ConstraintViolationException;
+
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
@@ -31,12 +28,17 @@ import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.test.context.junit4.SpringRunner;
 
-import javax.validation.ConstraintViolationException;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import com.netflix.conductor.common.metadata.tasks.TaskDef;
+import com.netflix.conductor.common.metadata.tasks.TaskType;
+import com.netflix.conductor.common.metadata.workflow.SubWorkflowParams;
+import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
+import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
+import com.netflix.conductor.core.exception.ApplicationException;
+import com.netflix.conductor.core.exception.TerminateWorkflowException;
+import com.netflix.conductor.dao.MetadataDAO;
 
 import static com.netflix.conductor.TestUtils.getConstraintViolationMessages;
+
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
@@ -67,11 +69,9 @@ public class MetadataMapperServiceTest {
         }
     }
 
-    @Autowired
-    private MetadataDAO metadataDAO;
+    @Autowired private MetadataDAO metadataDAO;
 
-    @Autowired
-    private MetadataMapperService metadataMapperService;
+    @Autowired private MetadataMapperService metadataMapperService;
 
     @After
     public void cleanUp() {
@@ -87,7 +87,7 @@ public class MetadataMapperServiceTest {
         when(metadataDAO.getTaskDef(nameTaskDefinition)).thenReturn(taskDefinition);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask));
+        workflowDefinition.setTasks(List.of(workflowTask));
 
         metadataMapperService.populateTaskDefinitions(workflowDefinition);
 
@@ -105,7 +105,7 @@ public class MetadataMapperServiceTest {
         workflowTask.setTaskDefinition(taskDefinition);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask));
+        workflowDefinition.setTasks(List.of(workflowTask));
 
         metadataMapperService.populateTaskDefinitions(workflowDefinition);
 
@@ -126,7 +126,7 @@ public class MetadataMapperServiceTest {
         WorkflowTask workflowTask2 = createWorkflowTask(nameTaskDefinition2);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask1, workflowTask2));
+        workflowDefinition.setTasks(List.of(workflowTask1, workflowTask2));
 
         when(metadataDAO.getTaskDef(nameTaskDefinition2)).thenReturn(taskDefinition);
 
@@ -152,7 +152,7 @@ public class MetadataMapperServiceTest {
         TaskDef taskDefinition = createTaskDefinition(nameTaskDefinition1);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask1, workflowTask2));
+        workflowDefinition.setTasks(List.of(workflowTask1, workflowTask2));
 
         when(metadataDAO.getTaskDef(nameTaskDefinition1)).thenReturn(taskDefinition);
         when(metadataDAO.getTaskDef(nameTaskDefinition2)).thenReturn(null);
@@ -176,9 +176,10 @@ public class MetadataMapperServiceTest {
         workflowTask.setSubWorkflowParam(subWorkflowParams);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask));
+        workflowDefinition.setTasks(List.of(workflowTask));
 
-        when(metadataDAO.getLatestWorkflowDef(workflowDefinitionName)).thenReturn(Optional.of(subWorkflowDefinition));
+        when(metadataDAO.getLatestWorkflowDef(workflowDefinitionName))
+                .thenReturn(Optional.of(subWorkflowDefinition));
 
         metadataMapperService.populateTaskDefinitions(workflowDefinition);
 
@@ -208,7 +209,7 @@ public class MetadataMapperServiceTest {
         workflowTask.setSubWorkflowParam(subWorkflowParams);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask));
+        workflowDefinition.setTasks(List.of(workflowTask));
 
         metadataMapperService.populateTaskDefinitions(workflowDefinition);
 
@@ -223,7 +224,6 @@ public class MetadataMapperServiceTest {
         verifyNoMoreInteractions(metadataDAO);
     }
 
-
     @Test(expected = TerminateWorkflowException.class)
     public void testExceptionWhenWorkflowDefinitionNotAvailable() {
         String nameTaskDefinition = "taskSubworkflow8";
@@ -236,7 +236,7 @@ public class MetadataMapperServiceTest {
         workflowTask.setSubWorkflowParam(subWorkflowParams);
 
         WorkflowDef workflowDefinition = createWorkflowDefinition("testMetadataPopulation");
-        workflowDefinition.setTasks(ImmutableList.of(workflowTask));
+        workflowDefinition.setTasks(List.of(workflowTask));
 
         when(metadataDAO.getLatestWorkflowDef(workflowDefinitionName)).thenReturn(Optional.empty());
 
@@ -249,8 +249,10 @@ public class MetadataMapperServiceTest {
     public void testLookupWorkflowDefinition() {
         try {
             String workflowName = "test";
-            when(metadataDAO.getWorkflowDef(workflowName, 0)).thenReturn(Optional.of(new WorkflowDef()));
-            Optional<WorkflowDef> optionalWorkflowDef = metadataMapperService.lookupWorkflowDefinition(workflowName, 0);
+            when(metadataDAO.getWorkflowDef(workflowName, 0))
+                    .thenReturn(Optional.of(new WorkflowDef()));
+            Optional<WorkflowDef> optionalWorkflowDef =
+                    metadataMapperService.lookupWorkflowDefinition(workflowName, 0);
             assertTrue(optionalWorkflowDef.isPresent());
             metadataMapperService.lookupWorkflowDefinition(null, 0);
         } catch (ConstraintViolationException ex) {
@@ -263,8 +265,10 @@ public class MetadataMapperServiceTest {
     @Test(expected = IllegalArgumentException.class)
     public void testLookupLatestWorkflowDefinition() {
         String workflowName = "test";
-        when(metadataDAO.getLatestWorkflowDef(workflowName)).thenReturn(Optional.of(new WorkflowDef()));
-        Optional<WorkflowDef> optionalWorkflowDef = metadataMapperService.lookupLatestWorkflowDefinition(workflowName);
+        when(metadataDAO.getLatestWorkflowDef(workflowName))
+                .thenReturn(Optional.of(new WorkflowDef()));
+        Optional<WorkflowDef> optionalWorkflowDef =
+                metadataMapperService.lookupLatestWorkflowDefinition(workflowName);
         assertTrue(optionalWorkflowDef.isPresent());
 
         metadataMapperService.lookupLatestWorkflowDefinition(null);
